# sphinx-autoindex

./: .buildinfo  .gitignore  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/api/: api.doctree  config.doctree  extension.doctree  generator.doctree  index.doctree  package.doctree
.doctrees/quickstart/: usage.doctree
.github/workflows/: docs.yml  pypi.yml
_modules/: index.html
_modules/sphinx_autoindex/: config.html  extension.html  generator.html  package.html
_sources/: index.rst.txt
_sources/api/: api.rst.txt  config.rst.txt  generator.rst.txt  index.rst.txt  package.rst.txt
api/: api.html  config.html  extension.html  generator.html  index.html  package.html
docs/source/: conf.py  index.rst
docs/source/api/: extension.rst  generator.rst
docs/source/quickstart/: usage.md
quickstart/: usage.html
src/sphinx-autoindex/: generator.py
src/sphinx_autoindex/: generator.py
