[project]
name = "sphinx-autoindex"
version = "0.1.0"
description = "Sphinx extension to automatically index the source code for autodoc"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["sphinx"]

[project.urls]
Homepage = "https://github.com/MickaelDescamps/sphinx-autoindex"

[tool.setuptools]
packages = ["sphinx-autoindex"]
package-dir = {"" = "src"}

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"